# codeshift-blog

./: .dockerignore  .gitignore  DockerFile  README.md  cert.crt  cert.key  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: django.yml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_readerprofile_favorite_posts.py  0003_alter_user_managers.py  0004_selfauthorproxy.py  0005_delete_selfauthorproxy_authorproxy.py  0006_readerproxy.py  0007_delete_authorproxy_delete_readerproxy_user_role.py  0008_readerprofile_profile_image.py  0009_alter_readerprofile_profile_image.py  0010_remove_readerprofile_favorite_posts.py
accounts/tests/: test_author_profile.py
accounts/tests/models/: test_reader_profile.py  test_user_model.py
api/v1/: urls.py
assets/css/: bootstrap-icons.css
blogs/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
blogs/migrations/: 0001_initial.py  0002_comment.py  0003_alter_post_tags.py  0004_remove_post_dislikes_remove_post_likes.py  0005_remove_post_tags_delete_tag.py
blogs/models/: article.py  category.py  tag.py
core/: urls.py
core/settings/: base.py  dev.py  prod.py
temp/: index.html  login.html  profile.html  register.html  table.html
templates/: about.html  contact.html  create-post.html  index.html  login.html  post-create.html  post-edit.html  post-list.html  post.html  profile.html  regsiter-as.html  signup.html  topics-detail.html  topics-listing.html
templates/partials/: nav.html
utils/: swagger_schema.py
(+22 files in other folders)
